internal/gatewayapi/testdata/gateway-with-two-listeners-with-different-port-and-same-hostname.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http-1
      protocol: HTTP
      port: 80
      hostname: foo.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-2
      protocol: HTTP
      port: 81
      hostname: bar.com
      allowedRoutes:
        namespaces:
          from: Same
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    namespace: envoy-gateway
    name: httproute-1
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-1
        port: 8080
services:
  - apiVersion: v1
    kind: Service
    metadata:
      namespace: envoy-gateway
      name: service-1
    spec:
      clusterIP: 7.7.7.7
      ports:
        - port: 8080
