internal/gatewayapi/testdata/gateway-with-two-listeners-with-different-port-and-same-hostname.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http-1
      protocol: HTTP
      port: 80
      hostname: foo.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-2
      protocol: HTTP
      port: 81
      hostname: bar.com
      allowedRoutes:
        namespaces:
          from: Same
  status:
    listeners:
      - name: http-1
        supportedKinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        attachedRoutes: 1
        conditions:
          - type: Ready
            status: "True"
            reason: Ready
            message: Listener is ready
      - name: http-2
        supportedKinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        attachedRoutes: 1
        conditions:
          - type: Ready
            status: "True"
            reason: Ready
            message: Listener is ready
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    kind: HTTPRoute
    metadata:
      namespace: envoy-gateway
      name: httproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - matches:
            - path:
                value: "/"
          backendRefs:
            - name: service-1
              port: 8080
    status:
      parents:
        - parentRef:
            namespace: envoy-gateway
            name: gateway-1
          conditions:
            - type: Accepted
              status: "True"
              reason: Accepted
              message: Route is accepted
xdsIR:
  http:
    - name: envoy-gateway-gateway-1-http-1
      address: 0.0.0.0
      port: 10080
      hostnames:
        - "foo.com"
      routes:
        - name: envoy-gateway-httproute-1-rule-0-match-0-foo.com
          pathMatch:
            prefix: "/"
          destinations:
            - host: 7.7.7.7
              port: 8080
              weight: 1
    - name: envoy-gateway-gateway-1-http-2
      address: 0.0.0.0
      port: 10081
      hostnames:
        - "bar.com"
      routes:
        - name: envoy-gateway-httproute-1-rule-0-match-0-bar.com
          pathMatch:
            prefix: "/"
          destinations:
            - host: 7.7.7.7
              port: 8080
              weight: 1
infraIR:
  proxy:
    metadata:
      labels:
        gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway-class
    name: envoy-gateway-class
    image: envoyproxy/envoy:v1.23-latest
    listeners:
    - name: envoy-gateway-gateway-1
      address: ""
      ports:
        - name: http-1
          protocol: "HTTP"
          servicePort: 80
          containerPort: 10080
        - name: http-2
          protocol: "HTTP"
          servicePort: 81
          containerPort: 10081
